Docs migration changes for Eval (#16082)
Signed-off-by: Fatih Altinok <fatihaltinok@live.com>
Signed-off-by: Daniel Lok <daniel.lok@databricks.com>
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>
Co-authored-by: Fatih Altinok <fatihaltinok@live.com>
Co-authored-by: Daniel Lok <daniel.lok@databricks.com>

--- a/docs/docs/genai/tracing/lightweight-sdk.mdx
+++ b/docs/docs/genai/tracing/lightweight-sdk.mdx
@@ -77,7 +77,7 @@ The lightweight SDK works with various observability platforms. Choose your pref
 
           Lakehouse Monitoring for GenAI can be used regardless of whether your application is hosted on Databricks or not.
 
-          [Sign up for free](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=TRY_MLFLOW&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS) and [get started in a minute](https://docs.databricks.com/aws/en/generative-ai/agent-evaluation/monitoring) to run your GenAI application with complete observability.
+          [Sign up for free](https://signup.databricks.com/?destination_url=/ml/experiments-signup?source=OSS_DOCS&dbx_source=TRY_MLFLOW&signup_experience_step=EXPRESS&provider=MLFLOW) and [get started in a minute](https://docs.databricks.com/aws/en/generative-ai/agent-evaluation/monitoring) to run your GenAI application with complete observability.
         </div>
 
         <div class="flex-item padding-md">
