--- a/docs/docs/genai/flavors/index.mdx
+++ b/docs/docs/genai/flavors/index.mdx
@@ -8,7 +8,7 @@ MLflow 3 delivers built-in support for the GenAI frameworks you know and love—
 
 By choosing MLflow's native flavors, you gain end-to-end visibility and control without swapping tools:
 
-- **Unified Tracking & Models**: All calls, parameters, artifacts, and prompt templates become tracked entities within MLflow Experiments. Serialized GenAI application code becomes a LoggedModel—viewable and referencable within the MLflow UI and APIs.
+- **Unified Tracking & Models**: All calls, parameters, artifacts, and prompt templates become tracked entities within MLflow Experiments. Serialized GenAI application code becomes a LoggedModel—viewable and referenceable within the MLflow UI and APIs.
 - **Zero-Boilerplate Setup**: A single `mlflow.<flavor>.log_model(...)` call (or one line of auto-instrumentation) wires into your existing code.
 - **Reproducibility by Default**: MLflow freezes your prompt template, application parameters, framework versions, and dependencies so you can reproduce any result, anytime.
 - **Seamless Transition to Serving**: Each integration produces a standardized MLflow Model you can deploy for batch scoring or real-time inference with `mlflow models serve`.
@@ -23,8 +23,8 @@ Before you begin, make sure you have:
 - Credentials or API keys for your chosen provider (e.g., `OPENAI_API_KEY`, `ANTHROPIC_API_KEY`)
 - An MLflow Tracking Server (local or remote)
 
-:::tip Ready to dive in?  
-Pick your integration from the list below and follow the concise guide—each one gets you up and running in under 10 minutes.  
+:::tip Ready to dive in?
+Pick your integration from the list below and follow the concise guide—each one gets you up and running in under 10 minutes.
 :::
 
 ---
