add redirects and fixes
Signed-off-by: serena-ruan <serena.rxy@gmail.com>

--- a/docs/docs/classic-ml/traditional-ml/tutorials/serving-multiple-models-with-pyfunc/index.mdx
+++ b/docs/docs/classic-ml/traditional-ml/tutorials/serving-multiple-models-with-pyfunc/index.mdx
@@ -54,6 +54,6 @@ More specifically, we'll need to focus on the below components...
 
 Ready to see this in action? Check out the accompanying notebooks for a hands-on experience. Let's dive in!
 
-<Link className="button button--primary" to="notebooks/MME_Tutorial">
+<Link className="button button--primary" to="./notebooks/MME_Tutorial">
   <span>View the Notebook</span>
 </Link>
