--- a/docs/docs/genai/index.mdx
+++ b/docs/docs/genai/index.mdx
@@ -333,31 +333,31 @@ Explore MLflow's GenAI capabilities below to accelerate your AI development!
 ## Why MLflow for GenAI?
 
 <div class="flex-row" style={{ marginTop: "2rem" }}>
-  <div class="flex-item" style={{ flex: "1", marginRight: "1rem" }}>
-    ### 🔍 **Complete Observability**
+  <div class="flex-item" style={{ flex: "1", marginRight: "1.5rem" }}>
+    #### 🔍 Complete Observability
     See inside every AI decision with comprehensive tracing that captures prompts, retrievals, tool calls, and model responses. Debug complex workflows with confidence.
   </div>
-  <div class="flex-item" style={{ flex: "1", marginRight: "1rem" }}>
-    ### 📊 **Automated Quality Assurance**
+  <div class="flex-item" style={{ flex: "1", marginRight: "1.5rem" }}>
+    #### 📊 Automated Quality Assurance
     Stop manual testing with LLM judges and custom metrics. Systematically evaluate every change to ensure consistent improvements in your AI applications.
   </div>
   <div class="flex-item" style={{ flex: "1" }}>
-    ### 🚀 **Production-Ready Platform**
+    #### 🚀 Production-Ready Platform
     Deploy anywhere with confidence. From local servers to cloud platforms, MLflow handles the complexity of GenAI deployment, monitoring, and optimization.
   </div>
 </div>
 
 <div class="flex-row" style={{ marginTop: "2rem", marginBottom: "2rem" }}>
   <div class="flex-item" style={{ flex: "1", marginRight: "1rem" }}>
-    ### 🤝 **Framework Freedom**
+    #### 🤝 Framework Freedom
     Use any GenAI framework or model provider. With 15+ native integrations and extensible APIs, MLflow adapts to your tech stack, not the other way around.
   </div>
   <div class="flex-item" style={{ flex: "1", marginRight: "1rem" }}>
-    ### 🔄 **End-to-End Lifecycle**
+    #### 🔄 End-to-End Lifecycle
     Manage the complete GenAI journey from experimentation to production. Track prompts, evaluate quality, deploy models, and monitor performance in one platform.
   </div>
   <div class="flex-item" style={{ flex: "1" }}>
-    ### 👥 **Open Source Community**
+    #### 👥 Open Source Community
     Join thousands of teams building GenAI with MLflow. As part of the Linux Foundation, MLflow ensures your AI infrastructure remains open and vendor-neutral.
   </div>
 </div>
