--- a/docs/docs/genai/prompt-version-mgmt/prompt-registry/log-with-model.mdx
+++ b/docs/docs/genai/prompt-version-mgmt/prompt-registry/log-with-model.mdx
@@ -115,7 +115,7 @@ prompt = mlflow.register_prompt(
 
 Create a Python script ``chatbot.py`` with the following content.
 
-:::tips
+:::tip
 
 If you are using Jupyter notebook, you can uncomment the `%writefile` magic
 command and run the following code in a cell to generate the script.
